[package]
name = "ostree-coswid-generator"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coswid = "0.1.2"
ostree = "0.9.1"

gio = "0.9.0"
glib = "0.10.1"

sha2 = "0.9.3"
anyhow = "1.0"

ciborium = { version = "0.1.0", features = ["std"] }
